Image Link Update

--- a/email-signature/CA-snig.html
+++ b/email-signature/CA-snig.html
@@ -28,8 +28,7 @@
                   class="template3__ImageContainer-sc-vj949k-0 iAZHDN"
                   style="margin-right: 20px; display: block"
                   ><img
-                    src="https://raw.githubusercontent.com/codersaiful/codersaiful/master/images/profile/ca-icon-logo-small.jpg"
-                    role="presentation"
+                    src="https://github.com/mdibrahimk48/mdibrahimk48/blob/master/images/CA-Profile-Photo.jpg"
                     width="130"
                     class="image__StyledImage-sc-hupvqm-0 eLouvR"
                     style="max-width: 130px"
