--- a/email-signature/CA-snig.html
+++ b/email-signature/CA-snig.html
@@ -28,7 +28,8 @@
                   class="template3__ImageContainer-sc-vj949k-0 iAZHDN"
                   style="margin-right: 20px; display: block"
                   ><img
-                    src="https://github.com/mdibrahimk48/mdibrahimk48/blob/master/images/CA-Profile-Photo.jpg"
+                    src="https://github.com/mdibrahimk48/mdibrahimk48/tree/master/images/CA-Profile-Photo.jpg"
+                    role="presentation"
                     width="130"
                     class="image__StyledImage-sc-hupvqm-0 eLouvR"
                     style="max-width: 130px"
