--- a/email-signature/CA-snig.html
+++ b/email-signature/CA-snig.html
@@ -46,9 +46,10 @@
                     font-weight: 600;
                   "
                 >
-                  <span>Md. Ibrahim Khalil</span><span>&nbsp;</span><span></span>
+                  <span>IBRAHIM KHALIL</span><span>&nbsp;</span><span></span>
                 </h2>
-				<h4>Technical Support Engineer, CodeAstrology</h4>
+				<h4>WordPress Developer || Technical Support Engineer</h4>
+        <h3>CodeAstrology</h3>
                 <p
                   color="#000000"
                   font-size="small"
@@ -60,7 +61,7 @@
                     line-height: 20px;
                   "
                 >
-                  <span>WordPress theme and plugin Development</span>
+                  <span>WordPress Theme and Plugin Development</span>
                 </p>
                 <p
                   color="#000000"
