Main Section Done

--- a/email-signature/IK-sign.html
+++ b/email-signature/IK-sign.html
@@ -28,7 +28,7 @@
                   class="template3__ImageContainer-sc-vj949k-0 iAZHDN"
                   style="margin-right: 20px; display: block"
                   ><img
-                    src="https://raw.githubusercontent.com/mdibrahimk48/mdibrahimk48/master/images/CA/CA-Profile-Photo.jpg"
+                    src="https://raw.githubusercontent.com/mdibrahimk48/mdibrahimk48/master/images/IK/ik.jpg"
                     role="presentation"
                     width="130"
                     class="image__StyledImage-sc-hupvqm-0 eLouvR"
@@ -48,8 +48,7 @@
                 >
                   <span>IBRAHIM KHALIL</span><span>&nbsp;</span><span></span>
                 </h2>
-				<h4>WordPress Developer || Technical Support Engineer</h4>
-        <h3>CodeAstrology</h3>
+				          <h4>WordPress Developer || Technical Support Engineer</h4>
                 <p
                   color="#000000"
                   font-size="small"
@@ -61,7 +60,7 @@
                     line-height: 20px;
                   "
                 >
-                  <span>WordPress Theme and Plugin Development</span>
+                  <span>====== WordPress Theme and Plugin Development ======</span>
                 </p>
                 <p
                   color="#000000"
@@ -74,7 +73,7 @@
                     line-height: 20px;
                   "
                 >
-                  <span>WordPress, PHP, jQuery, JavaScript</span>
+                  <span>========= WordPress, PHP, jQuery, JavaScript =========</span>
                 </p>
               </td>
               <td width="30"><div style="width: 30px"></div></td>
@@ -144,7 +143,7 @@
                       </td>
                       <td style="padding: 0px; color: rgb(0, 0, 0)">
                         <a
-                          href="tel:+880 1303 304723"
+                          href="tel:+880 1517 816814"
                           color="#000000"
                           class="contact-info__ExternalLink-sc-mmkjr6-2 dwaWtg"
                           style="
@@ -152,7 +151,7 @@
                             color: rgb(0, 0, 0);
                             font-size: 12px;
                           "
-                          ><span>+880 1303 304723</span></a
+                          ><span>+880 1517 816814</span></a
                         >
                       </td>
                     </tr>
@@ -197,7 +196,7 @@
                       </td>
                       <td style="padding: 0px">
                         <a
-                          href="mailto:support@codeastrology.com"
+                          href="mailto:mdibrahimk48@gmail.com"
                           color="#000000"
                           class="contact-info__ExternalLink-sc-mmkjr6-2 dwaWtg"
                           style="
@@ -205,7 +204,7 @@
                             color: rgb(0, 0, 0);
                             font-size: 12px;
                           "
-                          ><span>support@codeastrology.com</span></a
+                          ><span>mdibrahimk48@gmail.com</span></a
                         >
                       </td>
                     </tr>
@@ -250,7 +249,7 @@
                       </td>
                       <td style="padding: 0px">
                         <a
-                          href="https://codeastrology.com"
+                          href="https://ibrahimkhalil.xyz"
                           color="#000000"
                           class="contact-info__ExternalLink-sc-mmkjr6-2 dwaWtg"
                           style="
@@ -258,7 +257,7 @@
                             color: rgb(0, 0, 0);
                             font-size: 12px;
                           "
-                          ><span>https://codeastrology.com</span></a
+                          ><span>https://ibrahimkhalil.xyz</span></a
                         >
                       </td>
                     </tr>
@@ -307,7 +306,7 @@
                           class="contact-info__Address-sc-mmkjr6-3 ikFVIq"
                           style="font-size: 12px; color: rgb(0, 0, 0)"
                           ><span
-                            >Parijat Abasik, Road 2, House 21, Rajshahi 6100,
+                            >Basudebpur, Godagari, Rajshahi 6300,
                             Bangladesh.</span
                           ></span
                         >
