--- a/email-signature/CA-sign.html
+++ b/email-signature/CA-sign.html
@@ -46,10 +46,10 @@
                     font-weight: 600;
                   "
                 >
-                  <span>IBRAHIM KHALIL</span><span>&nbsp;</span><span></span>
+                  <span>IBRAHIM KHALIL</br></br></span>
                 </h2>
-				<h4>WordPress Developer || Technical Support Engineer</h4>
-        <h3>CodeAstrology</h3>
+                <span><b>WordPress Developer || Technical Support Engineer</b></br></span>
+                <span><b>CodeAstrology</b></span>
                 <p
                   color="#000000"
                   font-size="small"
