--- a/email-signature/CA-sign.html
+++ b/email-signature/CA-sign.html
@@ -400,7 +400,7 @@
                     <tr style="text-align: right">
                       <td>
                         <a
-                          href="https://www.linkedin.com/company/codeastrology/"
+                          href="https://www.facebook.com/CodeAstrology"
                           color="#000000"
                           class="social-links__LinkAnchor-sc-py8uhj-2 kyynGZ"
                           style="
@@ -472,7 +472,7 @@
                       <td width="5"><div></div></td>
                       <td>
                         <a
-                          href="https://www.instagram.com/codeastrologybd/"
+                          href="https://www.instagram.com/ibrahimkhalilimran48/"
                           color="#000000"
                           class="social-links__LinkAnchor-sc-py8uhj-2 kyynGZ"
                           style="
