--- a/email-signature/IK-sign.html
+++ b/email-signature/IK-sign.html
@@ -399,7 +399,7 @@
                     <tr style="text-align: right">
                       <td>
                         <a
-                          href="https://www.linkedin.com/company/codeastrology/"
+                          href="https://www.facebook.com/mdibrahimk48"
                           color="#000000"
                           class="social-links__LinkAnchor-sc-py8uhj-2 kyynGZ"
                           style="
@@ -423,7 +423,7 @@
                       <td width="5"><div></div></td>
                       <td>
                         <a
-                          href="https://twitter.com/CodeAstrology"
+                          href="https://twitter.com/mdibrahimk48"
                           color="#000000"
                           class="social-links__LinkAnchor-sc-py8uhj-2 kyynGZ"
                           style="
@@ -447,7 +447,7 @@
                       <td width="5"><div></div></td>
                       <td>
                         <a
-                          href="https://www.linkedin.com/in/CodeAstrology/"
+                          href="https://www.linkedin.com/in/mdibrahimk48/"
                           color="#000000"
                           class="social-links__LinkAnchor-sc-py8uhj-2 kyynGZ"
                           style="
@@ -471,7 +471,7 @@
                       <td width="5"><div></div></td>
                       <td>
                         <a
-                          href="https://www.instagram.com/codeastrologybd/"
+                          href="https://www.instagram.com/mdibrahimk48/"
                           color="#000000"
                           class="social-links__LinkAnchor-sc-py8uhj-2 kyynGZ"
                           style="
