--- a/email-signature/IK-sign.html
+++ b/email-signature/IK-sign.html
@@ -376,7 +376,7 @@
             <tr>
               <td style="vertical-align: top">
                 <img
-                  src="https://raw.githubusercontent.com/mdibrahimk48/mdibrahimk48/master/images/CA/ca-logo-medium.png"
+                  src="https://raw.githubusercontent.com/mdibrahimk48/mdibrahimk48/master/images/IK/ik-sign-1.jpg"
                   role="presentation"
                   width="130"
                   class="image__StyledImage-sc-hupvqm-0 eLouvR"
