IK Email Signature Final Update

--- a/email-signature/IK-sign.html
+++ b/email-signature/IK-sign.html
@@ -335,7 +335,7 @@
         >
           <tbody>
             <tr>
-              <td height="30"></td>
+              <td height="10"></td>
             </tr>
             <tr>
               <td
@@ -353,7 +353,7 @@
               ></td>
             </tr>
             <tr>
-              <td height="30"></td>
+              <td height="10"></td>
             </tr>
           </tbody>
         </table>
@@ -379,6 +379,7 @@
                   src="https://raw.githubusercontent.com/mdibrahimk48/mdibrahimk48/master/images/IK/ik-sign-1.jpg"
                   role="presentation"
                   width="130"
+                  height="25"
                   class="image__StyledImage-sc-hupvqm-0 eLouvR"
                   style="display: inline-block; max-width: 130px"
                 />
@@ -501,6 +502,29 @@
           </tbody>
         </table>
       </td>
+    </tr>
+  </tbody>
+  <tbody>
+    <tr>
+      <td height="10"></td>
+    </tr>
+    <tr>
+      <td
+        color="#a4a4a4"
+        direction="horizontal"
+        width="auto"
+        height="1"
+        class="color-divider__Divider-sc-1h38qjv-0 dVPycS"
+        style="
+          width: 100%;
+          border-bottom: 1px solid rgb(164, 164, 164);
+          border-left: none;
+          display: block;
+        "
+      ></td>
+    </tr>
+    <tr>
+      <td height="10"></td>
     </tr>
   </tbody>
 </table>
