--- a/email-signature/IK-sign.html
+++ b/email-signature/IK-sign.html
@@ -48,7 +48,7 @@
                 >
                   <span>IBRAHIM KHALIL</span><span>&nbsp;</span><span></span>
                 </h2>
-				          <h4>WordPress Developer || Technical Support Engineer</h4>
+				          <h4>WordPress Developer || Technical Support</h4>
                 <p
                   color="#000000"
                   font-size="small"
@@ -60,7 +60,7 @@
                     line-height: 20px;
                   "
                 >
-                  <span>====== WordPress Theme and Plugin Development ======</span>
+                  <span>===  WordPress Theme and Plugin Development ===</span>
                 </p>
                 <p
                   color="#000000"
@@ -73,7 +73,7 @@
                     line-height: 20px;
                   "
                 >
-                  <span>========= WordPress, PHP, jQuery, JavaScript =========</span>
+                  <span>====== WordPress, PHP, jQuery, JavaScript ======</span>
                 </p>
               </td>
               <td width="30"><div style="width: 30px"></div></td>
@@ -249,7 +249,7 @@
                       </td>
                       <td style="padding: 0px">
                         <a
-                          href="https://ibrahimkhalil.xyz"
+                          href="https://profiles.wordpress.org/mdibrahimk48/"
                           color="#000000"
                           class="contact-info__ExternalLink-sc-mmkjr6-2 dwaWtg"
                           style="
@@ -257,7 +257,7 @@
                             color: rgb(0, 0, 0);
                             font-size: 12px;
                           "
-                          ><span>https://ibrahimkhalil.xyz</span></a
+                          ><span>https://profiles.wordpress.org/mdibrahimk48/</span></a
                         >
                       </td>
                     </tr>
