--- a/email-signature/CA-sign.html
+++ b/email-signature/CA-sign.html
@@ -48,8 +48,8 @@
                 >
                   <span>IBRAHIM KHALIL</br></br></span>
                 </h2>
-                <span><b>WordPress Developer || Technical Support Engineer</b></br></span>
-                <span><b>CodeAstrology</b></span>
+                <span><b>WordPress Developer</b></br></span>
+                <span><b>Head of the Technical Support Engineering</b></span>
                 <p
                   color="#000000"
                   font-size="small"
@@ -61,7 +61,7 @@
                     line-height: 20px;
                   "
                 >
-                  <span>WordPress Theme and Plugin Development</span>
+                  <br><span>WordPress Theme and Plugin Development</span>
                 </p>
                 <p
                   color="#000000"
