--- a/email-signature/CA-sign.html
+++ b/email-signature/CA-sign.html
@@ -306,7 +306,7 @@
                           class="contact-info__Address-sc-mmkjr6-3 ikFVIq"
                           style="font-size: 12px; color: rgb(0, 0, 0)"
                           ><span
-                            >Parijat Abasik, Road 2, House 21, Rajshahi 6100,
+                            >Parijat Abasik, Road 2, House 21, Rajshahi - 6100,
                             Bangladesh.</span
                           ></span
                         >
