--- a/email-signature/IK-sign.html
+++ b/email-signature/IK-sign.html
@@ -306,7 +306,7 @@
                           class="contact-info__Address-sc-mmkjr6-3 ikFVIq"
                           style="font-size: 12px; color: rgb(0, 0, 0)"
                           ><span
-                            >Basudebpur, Godagari, Rajshahi 6300,
+                            >Basudebpur, Godagari, Rajshahi - 6300,
                             Bangladesh.</span
                           ></span
                         >
