--- a/email-signature/IK-sign.html
+++ b/email-signature/IK-sign.html
@@ -73,7 +73,7 @@
                     line-height: 20px;
                   "
                 >
-                  <span>====== WordPress, PHP, jQuery, JavaScript ======</span>
+                  <span>====== WordPress, Plugin, jQuery, JavaScript ======</span>
                 </p>
               </td>
               <td width="30"><div style="width: 30px"></div></td>
